added events in culturals

--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Short Film Contest<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology </p>
+                <p>Unleash your creativity at our Short Film Contest, where medical innovation meets cinematic storytelling. Showcase your vision and inspire change </p>
               </div>
             </div>
 
@@ -663,7 +663,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Flash Mob<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology </p>
+                <p>Join the excitement and surprise at our Flash Mob, where spontaneous dance meets the spirit of community</p>
               </div>
             </div>
 
@@ -674,7 +674,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Fashion Parade<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology </p>
+                <p>Step into the spotlight at our Fashion Parade, where style and creativity collide on the runway</p>
               </div>
             </div>
 
@@ -685,7 +685,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Celebrity Night<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology </p>
+                <p>Experience the glitz and glamour at our Celebrity Night, where stars shine and unforgettable moments await</p>
               </div>
             </div>
 
@@ -696,7 +696,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Singing Competition<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology </p>
+                <p>Showcase your talent at our Singing Competition, where voices rise and dreams take flight! Join us for an unforgettable night of music </p>
               </div>
             </div>
 
@@ -707,7 +707,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Dance Competition<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology </p>
+                <p>Get ready to groove at our Dance Competition, where rhythm and talent take center stage! Join us for an electrifying showcase of moves </p>
               </div>
             </div>
 
@@ -718,7 +718,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>DJ Night<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology </p>
+                <p>Turn up the volume at our DJ Night, where electrifying beats and vibrant energy create an unforgettable party atmosphere! </p>
               </div>
             </div>
 
@@ -729,7 +729,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Medi Fun<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology </p>
+                <p>Join us for Medi Fun, where healthcare meets entertainment in a lively celebration of wellness and camaraderie! </p>
               </div>
             </div>
 
@@ -740,7 +740,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Esports<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology </p>
+                <p>Step into the arena at our Esports event, where skill and strategy collide in thrilling competition!</p>
               </div>
             </div>
 <!-- 
