--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,7 @@
             <h4>Useful Links</h4>
             <ul>
               <li><i class="fa fa-angle-right"></i> <a href="#">Home</a></li>
-              <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li>
+              <!-- <li><i class="fa fa-angle-right"></i> <a href="#">About us</a></li> -->
  <!--         <li><i class="fa fa-angle-right"></i> <a href="#">Services</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="fa fa-angle-right"></i> <a href="#">Privacy policy</a></li>
@@ -1428,8 +1428,8 @@
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="https://www.instagram.com/smarc_2k25/?igsh=d3BkNWwxZGl3MGlx&utm_source=qr#" target="_blank" rel="noopener noreferrer" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <!-- <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a> -->
+              <!-- <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a> -->
             </div>
 
           </div>
