Added Prices to events

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/5.jpg" alt="Speaker 5" class="img-fluid">
+              <img src="img/speakers/5-10.jpg" alt="Speaker 5" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Alejandrin Littel</a></h3>
-                <p>Qui molestiae natus</p>
+                <h3><a href="speaker-details.html">Dr. Sachidhananda moorty</a></h3>
+                <p> HOD - Department of Pharmacology </p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
@@ -254,7 +254,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Ophthalmology <span></span></h4>
-                <p> Cataract surgery on goat eye, Corneal foreign body removal, Fundus examination, Sclero corneal suturing, Sub conjunctival and intraviteral suturing - Price</p>
+                <p> Cataract surgery on goat eye, Corneal foreign body removal, Fundus examination, Sclero corneal suturing, Sub conjunctival and intraviteral suturing - 849</p>
               </div>
             </div>
 
@@ -265,7 +265,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>ENT <span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>Otoscope, Tracheostomy, Cricothyrodotomy, Heimlich Maneuver, Foreign body removal, Nasal bleeding management - 599</p>
               </div>
             </div>
 
@@ -276,7 +276,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>BPCS<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>Heart sounds and murmurs, Lumbar puncture, Ascitic tap, Biopsy processing techniques - 499</p>
               </div>
             </div>
 
@@ -287,7 +287,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Forensic Medicine<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>You will be getting hands on experience on Ophthmology - 499</p>
               </div>
             </div>
 
@@ -297,8 +297,8 @@
                 <div class="speaker">
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
-                <h4>Obsterics<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <h4>Obstetrics and Gynaecology<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - 899</p>
               </div>
             </div>
 
@@ -308,8 +308,8 @@
                 <div class="speaker">
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
-                <h4>Gynecology<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <h4>Oncology<span></span></h4>
+                <p>You will be getting hands on experience on Ophthmology - 249</p>
               </div>
             </div>
 
@@ -320,7 +320,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Wet Lab<span></span></h4>
-                <p>Basic Suturing and knotting on PIG Skin, Hands on Bowel Suturing on BUFFALO Intestine - Price</p>
+                <p>Basic Suturing and knotting on PIG Skin, Hands on Bowel Suturing on BUFFALO Intestine - 849</p>
               </div>
             </div>
 
@@ -330,8 +330,8 @@
                 <div class="speaker">
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
-                <h4>GI Laparroscopy<span></span></h4>
-                <p>Laproscopy, Endoscopy, Biopsy, Foreign body removal- Price</p>
+                <h4>GI Laparoscopy<span></span></h4>
+                <p>Laproscopy, Endoscopy, Biopsy, Foreign body removal- 499</p>
               </div>
             </div>
 
@@ -342,7 +342,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Basic Surgical Skills<span></span></h4>
-                <p>Gloving & Gowning, Ryles Tube (On Mannequin), Foley's Catheter (On Mannequin), Suturing On Pig Skin, Wound Dressing, Abscess Drainage - Price</p>
+                <p>Gloving & Gowning, Ryles Tube (On Mannequin), Foley's Catheter (On Mannequin), Suturing On Pig Skin, Wound Dressing, Abscess Drainage - 799</p>
               </div>
             </div>
 
@@ -353,7 +353,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Orthopedics<span></span></h4>
-                <p>External fixation and application, Fracture fixation, Implant exhibition, Splints and tractions - Price</p>
+                <p>External fixation and application, Fracture fixation, Implant exhibition, Splints and tractions - 749</p>
               </div>
             </div>
 
@@ -364,7 +364,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>ECG & STEMI<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>Basics of ECG, STEMI - 249</p>
               </div>
             </div>
 
@@ -374,8 +374,8 @@
                 <div class="speaker">
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
-                <h4>ICU Care<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <h4>ICU Care<span> Providing care that makes difference</span></h4>
+                <p>Trauma Care Approach, Emergency Care Set, Monitoring of Patient and ICU shift, Management of Poisoning, Team based approach on Cardiac Arrest - 799</p>
               </div>
             </div>
 
@@ -386,7 +386,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Neonatology<span></span></h4>
-                <p>Preparation at birth,routine care, Positive pressure ventilation, Intubation, Chest compression,drugs and vascular access, Simulation and debriefing- Price</p>
+                <p>Preparation at birth,routine care, Positive pressure ventilation, Intubation, Chest compression,drugs and vascular access, Simulation and debriefing- 399</p>
               </div>
             </div>
 
@@ -397,7 +397,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Radiology<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - Price</p>
+                <p>USG - Antenatal Mother;Abdomen, CT - RTA(Haemorrhage), X-Ray - Types of X-Ray; Positions;examples, Basics of MRI - 349</p>
               </div>
             </div>
 
@@ -408,7 +408,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Bio Chemistry<span></span></h4>
-                <p>ABG Analysis,Cardiac Tropinis, Lipid Profile - Price</p>
+                <p>ABG Analysis,Cardiac Tropinis, Lipid Profile - 249</p>
               </div>
             </div>
 
@@ -419,7 +419,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Pulmonology<span></span></h4>
-                <p>TB programme, Thoracocentesis, Interpretation of chest xrays - Price</p>
+                <p>TB programme, Thoracocentesis, Interpretation of chest xrays - 399</p>
               </div>
             </div>
 <!-- 
@@ -1004,7 +1004,7 @@
         <a href="img/gallery/1-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/1-6.jpg" alt=""></a>
         <a href="img/gallery/2-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/2-6.jpg" alt=""></a>
         <a href="img/gallery/3-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/3-6.jpg" alt=""></a>
-        <a href="img/gallery/4.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/4.jpg" alt=""></a>
+        <a href="img/gallery/4-6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/4-6.jpg" alt=""></a>
         <a href="img/gallery/5.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/5.jpg" alt=""></a>
         <a href="img/gallery/6.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/6.jpg" alt=""></a>
         <a href="img/gallery/7.jpg" class="venobox" data-gall="gallery-carousel"><img src="img/gallery/7.jpg" alt=""></a>
