--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/4-15.JPG" alt="Speaker 4" class="img-fluid">
+              <img src="img/speakers/5-10.jpg" alt="Speaker 5" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Dr. Renu Sulakhe</a></h3>
-                <p>Workshop and Scientific Committee Incharge</p>
+                <h3><a href="speaker-details.html">Dr. Sachidhananda moorty</a></h3>
+                <p> Organising Chairman SMARC </p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
@@ -176,10 +176,10 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker">
-              <img src="img/speakers/5-10.jpg" alt="Speaker 5" class="img-fluid">
+              <img src="img/speakers/4-15.JPG" alt="Speaker 4" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Dr. Sachidhananda moorty</a></h3>
-                <p> HOD - Department of Pharmacology </p>
+                <h3><a href="speaker-details.html">Dr. Renu Sulakhe</a></h3>
+                <p>Workshop and Scientific Committee Incharge</p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
