--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
             <div class="speaker">
               <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Dr K.V.V Satyanarayana Raju</a></h3>
+                <!-- <h3><a href="speaker-details.html">Dr K.V.V Satyanarayana Raju</a></h3> -->
                 <p>Chairman and Founder, Chaitanya group</p>
-                <div class="social">
+               <!--  <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
                   <a href=""><i class="fa fa-google-plus"></i></a>
                   <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -133,14 +133,14 @@
             <div class="speaker">
               <img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">K.Ravi Kiran Varma</a></h3>
+                <!-- <h3><a href="speaker-details.html">K.Ravi Kiran Varma</a></h3> -->
                 <p>Managing director, KIMS</p>
-                <div class="social">
+                <!-- <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
                   <a href=""><i class="fa fa-google-plus"></i></a>
                   <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -148,14 +148,14 @@
             <div class="speaker">
               <img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Dr.Anand Acharya</a></h3>
+                <!-- <h3><a href="speaker-details.html">Dr.Anand Acharya</a></h3> -->
                 <p>Dean & Principal, KIMS&RF</p>
-                <div class="social">
+               <!--  <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
                   <a href=""><i class="fa fa-google-plus"></i></a>
                   <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -163,14 +163,14 @@
             <div class="speaker">
               <img src="img/speakers/5-10.jpg" alt="Speaker 5" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Dr. Sachidhananda moorty</a></h3>
+                <!-- <h3><a href="speaker-details.html">Dr. Sachidhananda moorty</a></h3> -->
                 <p> Organising Chairman SMARC </p>
-                <div class="social">
+                <!-- <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
                   <a href=""><i class="fa fa-google-plus"></i></a>
                   <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -178,14 +178,14 @@
             <div class="speaker">
               <img src="img/speakers/4-15.JPG" alt="Speaker 4" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Dr. Renu Sulakhe</a></h3>
+                <!-- <h3><a href="speaker-details.html">Dr. Renu Sulakhe</a></h3> -->
                 <p>Workshop and Scientific Committee Incharge</p>
-                <div class="social">
+                <!-- <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
                   <a href=""><i class="fa fa-google-plus"></i></a>
                   <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -193,14 +193,14 @@
             <div class="speaker">
               <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Willow Trantow</a></h3>
+                <!-- <h3><a href="speaker-details.html">Willow Trantow</a></h3> -->
                 <p>Non autem dicta</p>
-                <div class="social">
+               <!--  <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
                   <a href=""><i class="fa fa-google-plus"></i></a>
                   <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
