--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="speaker">
               <img src="img/speakers/1.jpg" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <!-- <h3><a href="speaker-details.html">Dr K.V.V Satyanarayana Raju</a></h3> -->
+                <h3>Dr K.V.V Satyanarayana Raju</a></h3>
                 <p>Chairman and Founder, Chaitanya group</p>
                <!--  <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -133,7 +133,7 @@
             <div class="speaker">
               <img src="img/speakers/2.jpg" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <!-- <h3><a href="speaker-details.html">K.Ravi Kiran Varma</a></h3> -->
+                <h3>K.Ravi Kiran Varma</a></h3>
                 <p>Managing director, KIMS</p>
                 <!-- <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -148,7 +148,7 @@
             <div class="speaker">
               <img src="img/speakers/3.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <!-- <h3><a href="speaker-details.html">Dr.Anand Acharya</a></h3> -->
+                <h3>Dr.Anand Acharya</a></h3>
                 <p>Dean & Principal, KIMS&RF</p>
                <!--  <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -163,7 +163,7 @@
             <div class="speaker">
               <img src="img/speakers/5-10.jpg" alt="Speaker 5" class="img-fluid">
               <div class="details">
-                <!-- <h3><a href="speaker-details.html">Dr. Sachidhananda moorty</a></h3> -->
+                <h3>Dr. Sachidhananda moorty</a></h3>
                 <p> Organising Chairman SMARC </p>
                 <!-- <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -178,7 +178,7 @@
             <div class="speaker">
               <img src="img/speakers/4-15.JPG" alt="Speaker 4" class="img-fluid">
               <div class="details">
-                <!-- <h3><a href="speaker-details.html">Dr. Renu Sulakhe</a></h3> -->
+                <h3>Dr. Renu Sulakhe</a></h3>
                 <p>Workshop and Scientific Committee Incharge</p>
                 <!-- <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
@@ -193,7 +193,7 @@
             <div class="speaker">
               <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
               <div class="details">
-                <!-- <h3><a href="speaker-details.html">Willow Trantow</a></h3> -->
+                <h3>Willow Trantow</a></h3>
                 <p>Non autem dicta</p>
                <!--  <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
