Made price bold

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           </li>
         </ul>
 
-        <h3 class="sub-heading">Welcome to this year’s Medical Conference, where we will engage in workshops, scientific events, and 
+        <h3 class="sub-heading">Welcome to this year's Medical Conference, where we will engage in workshops, scientific events, and 
           cultural activities designed to foster collaboration and innovation in the medical field.</h3>
 
         <div class="tab-content row justify-content-center">
@@ -254,7 +254,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Ophthalmology <span></span></h4>
-                <p> Cataract surgery on goat eye, Corneal foreign body removal, Fundus examination, Sclero corneal suturing, Sub conjunctival and intraviteral suturing - 849</p>
+                <p> Cataract surgery on goat eye, Corneal foreign body removal, Fundus examination, Sclero corneal suturing, Sub conjunctival and intraviteral suturing - <b>849</b></p>
               </div>
             </div>
 
@@ -265,7 +265,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>ENT <span></span></h4>
-                <p>Otoscope, Tracheostomy, Cricothyrodotomy, Heimlich Maneuver, Foreign body removal, Nasal bleeding management - 599</p>
+                <p>Otoscope, Tracheostomy, Cricothyrodotomy, Heimlich Maneuver, Foreign body removal, Nasal bleeding management - <b>599</b></p>
               </div>
             </div>
 
@@ -276,7 +276,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>BPCS<span></span></h4>
-                <p>Heart sounds and murmurs, Lumbar puncture, Ascitic tap, Biopsy processing techniques - 499</p>
+                <p>Heart sounds and murmurs, Lumbar puncture, Ascitic tap, Biopsy processing techniques - <b>499</b> </p>
               </div>
             </div>
 
@@ -287,7 +287,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Forensic Medicine<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - 499</p>
+                <p>You will be getting hands on experience on Ophthmology - <b>499</b> </p>
               </div>
             </div>
 
@@ -298,7 +298,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Obstetrics and Gynaecology<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - 899</p>
+                <p>You will be getting hands on experience on Ophthmology - <b>899</b> </p>
               </div>
             </div>
 
@@ -309,7 +309,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Oncology<span></span></h4>
-                <p>You will be getting hands on experience on Ophthmology - 249</p>
+                <p>You will be getting hands on experience on Ophthmology - <b>249</b> </p>
               </div>
             </div>
 
@@ -320,7 +320,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Wet Lab<span></span></h4>
-                <p>Basic Suturing and knotting on PIG Skin, Hands on Bowel Suturing on BUFFALO Intestine - 849</p>
+                <p>Basic Suturing and knotting on PIG Skin, Hands on Bowel Suturing on BUFFALO Intestine - <b>849</b> </p>
               </div>
             </div>
 
@@ -331,7 +331,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>GI Laparoscopy<span></span></h4>
-                <p>Laproscopy, Endoscopy, Biopsy, Foreign body removal- 499</p>
+                <p>Laproscopy, Endoscopy, Biopsy, Foreign body removal - <b>499</b></p>
               </div>
             </div>
 
@@ -342,7 +342,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Basic Surgical Skills<span></span></h4>
-                <p>Gloving & Gowning, Ryles Tube (On Mannequin), Foley's Catheter (On Mannequin), Suturing On Pig Skin, Wound Dressing, Abscess Drainage - 799</p>
+                <p>Gloving & Gowning, Ryles Tube (On Mannequin), Foley's Catheter (On Mannequin), Suturing On Pig Skin, Wound Dressing, Abscess Drainage - <b>799</b> </p>
               </div>
             </div>
 
@@ -353,7 +353,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Orthopedics<span></span></h4>
-                <p>External fixation and application, Fracture fixation, Implant exhibition, Splints and tractions - 749</p>
+                <p>External fixation and application, Fracture fixation, Implant exhibition, Splints and tractions - <b>749</b> </p>
               </div>
             </div>
 
@@ -364,7 +364,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>ECG & STEMI<span></span></h4>
-                <p>Basics of ECG, STEMI - 249</p>
+                <p>Basics of ECG, STEMI - <b>249</b> </p>
               </div>
             </div>
 
@@ -375,7 +375,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>ICU Care<span> Providing care that makes difference</span></h4>
-                <p>Trauma Care Approach, Emergency Care Set, Monitoring of Patient and ICU shift, Management of Poisoning, Team based approach on Cardiac Arrest - 799</p>
+                <p>Trauma Care Approach, Emergency Care Set, Monitoring of Patient and ICU shift, Management of Poisoning, Team based approach on Cardiac Arrest - <b>799</b> </p>
               </div>
             </div>
 
@@ -386,7 +386,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Neonatology<span></span></h4>
-                <p>Preparation at birth,routine care, Positive pressure ventilation, Intubation, Chest compression,drugs and vascular access, Simulation and debriefing- 399</p>
+                <p>Preparation at birth,routine care, Positive pressure ventilation, Intubation, Chest compression,drugs and vascular access, Simulation and debriefing - <b>399</b> </p>
               </div>
             </div>
 
@@ -397,7 +397,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Radiology<span></span></h4>
-                <p>USG - Antenatal Mother;Abdomen, CT - RTA(Haemorrhage), X-Ray - Types of X-Ray; Positions;examples, Basics of MRI - 349</p>
+                <p>USG - Antenatal Mother;Abdomen, CT - RTA(Haemorrhage), X-Ray - Types of X-Ray; Positions;examples, Basics of MRI - <b>349</b> </p>
               </div>
             </div>
 
@@ -408,7 +408,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Bio Chemistry<span></span></h4>
-                <p>ABG Analysis,Cardiac Tropinis, Lipid Profile - 249</p>
+                <p>ABG Analysis,Cardiac Tropinis, Lipid Profile - <b>249</b> </p>
               </div>
             </div>
 
@@ -419,7 +419,7 @@
                   <!-- <img src="img/speakers/1.jpg" alt="Brenden Legros"> -->
                 </div>
                 <h4>Pulmonology<span></span></h4>
-                <p>TB programme, Thoracocentesis, Interpretation of chest xrays - 399</p>
+                <p>TB programme, Thoracocentesis, Interpretation of chest xrays - <b>399</b> </p>
               </div>
             </div>
 <!-- 
