--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
             <div class="speaker">
               <img src="img/speakers/6.jpg" alt="Speaker 6" class="img-fluid">
               <div class="details">
-                <h3>Willow Trantow</a></h3>
-                <p>Non autem dicta</p>
+                <h3>And many more</a></h3>
+                <p>Exciting speakers</p>
                <!--  <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
